--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
         <title>Chartam :: An Ruby Fiddle</title>
         <meta charset="utf-8" />
 
+        <link rel="stylesheet" href="./index.css">
+
+        <!--- fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Dosis:500" rel="stylesheet">  
+
         <!-- paper css --> 
         <link rel="stylesheet" href="https://unpkg.com/papercss@1.3.1/dist/paper.min.css">
 
